fix: added new changes in domain and database pokemon
