# swagger.yaml
@@ -10,7 +10,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: http://localhost:3000
+  - url: http://localhost:3500
 tags:
   - name: auth
     description: Access the api
@@ -95,7 +95,7 @@ paths:
               application/json:
                 schema:
                   $ref: '#/components/schemas/Favorites'
-  /:idUser:
+  /favorites/:idUser:
     get:
       tags:
         - favorites
@@ -112,7 +112,7 @@ paths:
                   items:
                     $ref: '#/components/schemas/Favorites'
 
-  /:idUser/:name:
+  /favorites/:idUser/:name:
     delete:
       tags:
         - favorites
